--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,7 +2,7 @@
   --background: #101114;
   --primary-color: #1c1d20;
   --secondary-color: #4a4d57;
-  --accent-color: #ff5ecf;
+  --accent-color: #ffd22e;
   --text-color: #f9f9f9;
 }
 * {
